--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <a href="./jgeskugfiuweilrtilwevjb15646wergw6.apk" download='ZovaxTv_V1.0.0.apk' class="download-btn">Download
+    <a href="./jgeskugfiuweilrtilwevjb15646wergw6.apk" download='ZovaxTv_V1.0.0.apk' class="download-btn">Download App
         <i class="fa fa-download"></i>
+    </a>
+    <h4>If you want to watch your favorite movie, web series on our app, then join our Telegram group.</h4>
+    <h4>अगर आपको अपनी मनपसंद मूवी , वेब सीरीज, हमारे अप्प पर देखना चाहते है तो हमारा टेलीग्राम गोरुप ज्वाइन करे</h4>
+    <a href="https://telegram.me/zovaxtv" download='ZovaxTv_V1.0.0.apk' class="download-btn">Join Telegram
+        <i class="fa fa-telegram"></i>
     </a>
 </body>
 </html>
